# nano-protein-ais

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  visualize.py
alphafold2/: README.md  model.py  train.py  visualize.ipynb
alphafold3/: model.py  train.py
esm2/: README.md  model.py  train.py  visualize.ipynb
notebooks/: lecture_figures.ipynb
polymer_diffusion/: model.py  train.py
polymer_vae/: model.py  train.py
proteinmpnn/: README.md  model.py  train.py  visualize.ipynb
rfdiffusion/: README.md  model.py  train.py  visualize.ipynb
scripts/: overfit_single.py  run_all.sh  train_and_eval.py  visualize_frames.py  visualize_results.py
tests/: conftest.py  test_alphafold2.py  test_alphafold3.py  test_esm2.py  test_polymer_diffusion.py  test_polymer_vae.py  test_proteinmpnn.py  test_rfdiffusion.py
