[project]
name = "nano-protein-ais"
version = "0.1.0"
description = "Minimal, readable implementations of AlphaFold2, ESM2, RFDiffusion, and ProteinMPNN"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24",
    "biopython>=1.83",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools]
packages = ["esm2", "proteinmpnn", "alphafold2", "rfdiffusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
