[project]
name = "nano-protein-ais"
version = "0.1.0"
description = "Minimal, readable implementations of AlphaFold3, RFDiffusion, and ProteinMPNN"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24",
    "biopython>=1.83",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
]
pymol = [
    "pymol-open-source>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools]
packages = ["proteinmpnn", "alphafold3", "rfdiffusion", "esm2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
